arc-script/arc-script-test/insta/src/snapshots/ast@enum-pattern.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/enum-pattern.arc
---
enum Option { Some(i32), None }
fun main() {
    if let Option::Some(x) = Option::Some(5) {
        unit
    } else {
        unit
    }
}

