arc-script/arc-script-test/insta/src/snapshots/ast@if.arc.snap
---
source: arc-script-core/tests/insta/mod.rs
expression: s
input_file: arc-script-core/tests/insta/snapshot-tests/if.arc
---
fun test() {
    let c0 = true in
    let c1 = false in
    let v = 3 in
    if c0 {
        if c1 {
            v
        } else {
            v
        }
    } else {
        if c1 {
            v
        } else {
            v
        }
    }
}

