arc-script/arc-script-test/insta/src/snapshots/ast@option.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/option.arc
---
enum Option { Some(i32), None }
fun main() {
    if let Option::Some(y) = Option::Some(3) {
        unit
    } else {
        unit
    }
}

