arc-script/arc-script-test/insta/src/snapshots/ast@ownership.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-fail/ownership.arc
---
fun main(s0: ~i32) {
    (s0, s0)
}

