arc-script/arc-script-test/insta/src/snapshots/ast@path.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/path.arc
---
fun main() {
    let x = 1 in
    let y = x in
    unit
}

