arc-script/arc-script-test/insta/src/snapshots/ast@pattern.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/pattern.arc
---
fun main() {
    let ((a, b), (c, d)) = ((1, 2), (3, 4)) in
    unit
}

